--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+
+# ignore this type of mac os/Windows files ...
+.DS_Store
+Thumbs.db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
