--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
+
 		{
 			"name": "Task 09 Planetwars Debug",
 			"type": "debugpy",
@@ -31,6 +32,14 @@
 			"program": "${workspaceFolder}\\12 - Lab - Steering #2 - Wander and Paths\\sample\\main.py",
 			"console": "integratedTerminal",
 			"cwd": "${workspaceFolder}\\12 - Lab - Steering #2 - Wander and Paths\\sample"
+		},
+		{
+			"name": "Task 5 Debug",
+			"type": "debugpy",
+			"request": "launch",
+			"program": "${workspaceFolder}\\05 - Lab - Graphs, Paths and Search\\sample\\main.py",
+			"console": "integratedTerminal",
+			"cwd": "${workspaceFolder}\\05 - Lab - Graphs, Paths and Search\\sample"
 		}
 	]
 }
