removed custom AI from launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,8 +16,8 @@
 			"args": [
 				"--gui",
 				"-p",
+				"OneSlowMove",
 				"Blanko",
-				"GalaxyConquerer",
 				"--save-replay",
 				"-m",
 				"map019"
